@@ -37,6 +37,12 @@ Changelog
   replaced with the integer 1, and likewise for ``False`` and 0 and vice
   versa.
 
+- Fixed an issue similar to the above one but for numeric values--now
+  replacing a header value with an equivalent numeric value will up/downcast
+  that value.  For example replacing '0' with '0.0' will write '0.0' to the
+  header so that it is returned as a floating point value.  Likewise a float
+  can be downcast to an integer. (spacetelescope/PyFITS#49)
+
 - A handful of Python 3 compatibility fixes, especially for compatibility
   with the upcoming Python 3.4.
 
